--- a/dashboard.html
+++ b/dashboard.html
@@ -6,62 +6,114 @@
     <title>Dashboard - Attendance System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f8f9fa;
+        }
+
+        #sidebar {
+            width: 250px;
+            background-color: #212529;
+            color: white;
+            min-height: 100vh;
+        }
+
+        #sidebar a {
+            color: white;
+            text-decoration: none;
+            padding: 15px 20px;
+            display: block;
+            transition: background 0.3s ease;
+        }
+
+        #sidebar a:hover {
+            background-color: #000;
+        }
+
+        .card {
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+        }
+
+        #searchBar {
+            border: 1px solid #ced4da;
+            border-radius: 5px;
+        }
+
+        table th, table td {
+            padding: 15px;
+        }
+
+        .attendance-status {
+            padding: 5px 10px;
+            border-radius: 15px;
+            font-size: 12px;
+            font-weight: 600;
+        }
+
+        .marked {
+            background-color: #d1e7dd;
+            color: #0f5132;
+        }
+    </style>
 </head>
 <body>
-    <div class="d-flex">
-        <!-- Sidebar -->
-        <nav class="bg-dark text-white vh-100 p-3 d-flex flex-column" style="width: 250px;">
-            <h4 class="text-center mb-4">Dashboard</h4>
-            <ul class="nav flex-column">
-                <li class="nav-item"><a href="home.html" class="nav-link text-white">Home</a></li>
-                <li class="nav-item"><a href="profile.html" class="nav-link text-white">Profile</a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-white">Attendance</a></li>
-            </ul>
-            <a href="login.html" class="nav-link text-white mt-auto">Logout</a>
-        </nav>
-        
-        <!-- Main Content -->
-        <div class="container-fluid p-4 flex-grow-1">
-            <h2>Welcome, <span id="userName">User</span></h2>
-            <p><strong>Course:</strong> Computer Science</p>
-            <button class="btn btn-primary my-3" id="markAttendance">Mark Attendance</button>
-            <div class="d-flex justify-content-end mb-3">
-                <input type="text" id="searchBar" class="form-control w-25 me-2" placeholder="Search...">
-                <button class="btn btn-primary" id="searchButton">Search</button>
-            </div>
-            <!-- Attendance Table -->
-            <div class="card shadow-sm p-3">
-                <h4>Attendance Records</h4>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody id="attendanceTable">
-                        <!-- Attendance records will be added dynamically -->
-                         <td>11/02/25</td>
-                         <td>23:56:56</td>
-                         <td>Marked</td>
-                    </tbody>
-                    <tbody id="attendanceTable">
-                        <!-- Attendance records will be added dynamically -->
-                         <td>15/02/25</td>
-                         <td>19:40:43</td>
-                         <td>Marked</td>
-                    </tbody>
-                    <tbody id="attendanceTable">
-                        <!-- Attendance records will be added dynamically -->
-                         <td>04/09/25</td>
-                         <td>13:00:39</td>
-                         <td>Marked</td>
-                    </tbody>
-                </table>
-            </div>
+<div class="d-flex">
+    <!-- Sidebar -->
+    <nav id="sidebar" class="d-flex flex-column p-3">
+        <h4 class="text-center mb-4">Dashboard</h4>
+        <a href="home.html">Home</a>
+        <a href="profile.html">Profile</a>
+        <a href="#">Attendance</a>
+        <a href="login.html" class="mt-auto">Logout</a>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container-fluid p-4 flex-grow-1">
+        <h2>Welcome, <span id="userName">User</span></h2>
+        <p><strong>Course:</strong> Computer Science</p>
+
+        <button class="btn btn-dark my-3" id="markAttendance">Mark Attendance</button>
+
+        <div class="d-flex justify-content-end mb-3">
+            <input type="text" id="searchBar" class="form-control w-25 me-2" placeholder="Search...">
+            <button class="btn btn-dark" id="searchButton">Search</button>
+        </div>
+
+        <!-- Attendance Table -->
+        <div class="card p-3">
+            <h4>Attendance Records</h4>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <th>Status</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>11/02/25</td>
+                    <td>23:56:56</td>
+                    <td><span class="attendance-status marked">Marked</span></td>
+                </tr>
+                <tr>
+                    <td>15/02/25</td>
+                    <td>19:40:43</td>
+                    <td><span class="attendance-status marked">Marked</span></td>
+                </tr>
+                <tr>
+                    <td>04/09/25</td>
+                    <td>13:00:39</td>
+                    <td><span class="attendance-status marked">Marked</span></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
